--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/nodegit": "^0.27.7",
     "@types/readline-sync": "^1.4.4",
     "commander": "^8.3.0",
+    "nodegit": "^0.27.0",
     "readline-sync": "^1.4.10"
   }
 }
